// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.ts 1`] = `
Object {
  "fixedOutput": "import { gql } from \\"gql\\";

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").ThingDocument;
",
  "lintMessages": Array [
    Object {
      "column": 1,
      "endColumn": 2,
      "endLine": 7,
      "fix": Object {
        "range": Array [
          68,
          68,
        ],
        "text": " as import(\\"./__generated__/thing\\").ThingDocument",
      },
      "line": 3,
      "message": "You must cast gql tags with the generated type",
      "messageId": "mustUseAs",
      "nodeType": "TaggedTemplateExpression",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"gql\\";

gql\`
~~~~    [You must cast gql tags with the generated type]
  query Thing {
~~~~~~~~~~~~~~~    [You must cast gql tags with the generated type]
    something
~~~~~~~~~~~~~    [You must cast gql tags with the generated type]
  }
~~~    [You must cast gql tags with the generated type]
\`;
~    [You must cast gql tags with the generated type]
",
}
`;

exports[`basic-fixed.ts 1`] = `
Object {
  "lintMessages": Array [],
  "snapshot": "
import { gql } from \\"gql\\";

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").ThingDocument;
",
}
`;

exports[`fragment.ts 1`] = `
Object {
  "fixedOutput": "import { gql } from \\"gql\\";

const fields = gql\`
  fragment Fields on Thing {
    id
    something
  }
\`

gql\`
  \${fields}
  query GetThing {
    ...Fields
  }
\` as import(\\"./__generated__/get-thing\\").GetThingDocument
",
  "lintMessages": Array [
    Object {
      "column": 1,
      "endColumn": 2,
      "endLine": 15,
      "fix": Object {
        "range": Array [
          160,
          160,
        ],
        "text": " as import(\\"./__generated__/get-thing\\").GetThingDocument",
      },
      "line": 10,
      "message": "You must cast gql tags with the generated type",
      "messageId": "mustUseAs",
      "nodeType": "TaggedTemplateExpression",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"gql\\";

const fields = gql\`
  fragment Fields on Thing {
    id
    something
  }
\`

gql\`
~~~~    [You must cast gql tags with the generated type]
  \${fields}
~~~~~~~~~~~    [You must cast gql tags with the generated type]
  query GetThing {
~~~~~~~~~~~~~~~~~~    [You must cast gql tags with the generated type]
    ...Fields
~~~~~~~~~~~~~    [You must cast gql tags with the generated type]
  }
~~~    [You must cast gql tags with the generated type]
\`
~    [You must cast gql tags with the generated type]
",
}
`;

exports[`invalid-type-assertion.ts 1`] = `
Object {
  "fixedOutput": "import { gql } from \\"gql\\";

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").ThingDocument;

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").ThingDocument;

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").ThingDocument;
",
  "lintMessages": Array [
    Object {
      "column": 6,
      "endColumn": 14,
      "endLine": 7,
      "fix": Object {
        "range": Array [
          72,
          80,
        ],
        "text": "import(\\"./__generated__/thing\\").ThingDocument",
      },
      "line": 7,
      "message": "The type assertion on a gql tag is not in the expected format",
      "messageId": "mustUseAsCorrectly",
      "nodeType": "TSTypeReference",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
    Object {
      "column": 6,
      "endColumn": 48,
      "endLine": 13,
      "fix": Object {
        "range": Array [
          127,
          169,
        ],
        "text": "import(\\"./__generated__/thing\\").ThingDocument",
      },
      "line": 13,
      "message": "The type assertion on a gql tag is not in the expected format",
      "messageId": "mustUseAsCorrectly",
      "nodeType": "TSImportType",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
    Object {
      "column": 6,
      "endColumn": 57,
      "endLine": 19,
      "fix": Object {
        "range": Array [
          216,
          267,
        ],
        "text": "import(\\"./__generated__/thing\\").ThingDocument",
      },
      "line": 19,
      "message": "The type assertion on a gql tag is not in the expected format",
      "messageId": "mustUseAsCorrectly",
      "nodeType": "TSImportType",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"gql\\";

gql\`
  query Thing {
    something
  }
\` as SomeType;
     ~~~~~~~~    [The type assertion on a gql tag is not in the expected format]

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/thing\\").WrongThing;
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~    [The type assertion on a gql tag is not in the expected format]

gql\`
  query Thing {
    something
  }
\` as import(\\"./__generated__/wrong-thing\\").ThingDocument;
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~    [The type assertion on a gql tag is not in the expected format]
",
}
`;

exports[`multiple-operations.ts 1`] = `
Object {
  "lintMessages": Array [
    Object {
      "column": 1,
      "endColumn": 2,
      "endLine": 10,
      "line": 3,
      "message": "GraphQL documents must have only one operation",
      "messageId": "singleOperation",
      "nodeType": "TaggedTemplateExpression",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"gql\\";

gql\`
~~~~    [GraphQL documents must have only one operation]
  query{
~~~~~~~~    [GraphQL documents must have only one operation]
    something
~~~~~~~~~~~~~    [GraphQL documents must have only one operation]
  }
~~~    [GraphQL documents must have only one operation]
  query Thing {
~~~~~~~~~~~~~~~    [GraphQL documents must have only one operation]
    something
~~~~~~~~~~~~~    [GraphQL documents must have only one operation]
  }
~~~    [GraphQL documents must have only one operation]
\`;
~    [GraphQL documents must have only one operation]
",
}
`;

exports[`no-name.ts 1`] = `
Object {
  "lintMessages": Array [
    Object {
      "column": 1,
      "endColumn": 2,
      "endLine": 7,
      "line": 3,
      "message": "GraphQL operations must have a name",
      "messageId": "mustBeNamed",
      "nodeType": "TaggedTemplateExpression",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"@ts-gql/tag\\";

gql\`
~~~~    [GraphQL operations must have a name]
  query {
~~~~~~~~~    [GraphQL operations must have a name]
    something
~~~~~~~~~~~~~    [GraphQL operations must have a name]
  }
~~~    [GraphQL operations must have a name]
\`;
~    [GraphQL operations must have a name]
",
}
`;

exports[`parse-error.ts 1`] = `
Object {
  "lintMessages": Array [
    Object {
      "column": 1,
      "endColumn": 2,
      "endLine": 7,
      "line": 3,
      "message": "GraphQL documents must either have a single operation or a single fragment",
      "messageId": "operationOrSingleFragment",
      "nodeType": "TaggedTemplateExpression",
      "ruleId": "gql-type-assertion",
      "severity": 2,
    },
  ],
  "snapshot": "
import { gql } from \\"@ts-gql/tag\\";

gql\`
~~~~    [GraphQL documents must either have a single operation or a single fragment]
  que Thing {
~~~~~~~~~~~~~    [GraphQL documents must either have a single operation or a single fragment]
    something
~~~~~~~~~~~~~    [GraphQL documents must either have a single operation or a single fragment]
  }
~~~    [GraphQL documents must either have a single operation or a single fragment]
\`;
~    [GraphQL documents must either have a single operation or a single fragment]
",
}
`;
